# ASK-Professor-G-How-to-Grasp

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
configs/: default.yaml  grippers.yaml  objects.yaml
data/grippers/Ability/: Ability.urdf  contact_points.json  eigengrasps.json  penetration_points.json
data/grippers/Allegro/: Allegro.urdf  allegro_hand_description_left.urdf
data/grippers/Barrett/: Barrett.urdf  Barrett.xml  link1.stl  link2.stl  link3.stl  palm.stl  tmpz5i2qb12_patched.urdf
data/grippers/FreedomHand/: FreedomHand.urdf
data/grippers/HumanHand/: HumanHand.urdf  bkp_HumanHand20DOF-zero.urdf
data/grippers/franka_panda/: franka_panda.urdf  franka_panda.xml  panda.urdf  panda_arm (copy).urdf
data/grippers/gripper1/: gripper1.urdf
data/grippers/gripper2/: gripper2.urdf
data/grippers/jaco_robot/: jaco_robot.urdf
data/grippers/robotiq_3finger/: RIQ_link_0.stl  RIQ_link_1.stl  RIQ_link_2.stl  RIQ_link_3.stl  RIQ_palm.stl  (+3 more)
docs/: README.md  index.html  styles.css
examples/: demo_config.yaml
examples/cached/: stage0_output.json  stage1_output_processed.json  step2_loss.py  step3_output.json
scripts/: generate_docs_cem_figure.py  run_cached_demo.py  run_pipeline.py
src/ask_professor_g/: __init__.py  cli.py  config.py  data_registry.py  gripper_axes.py  schemas.py
tests/: test_cached_demo.py  test_cem_optimizer.py  test_config.py  test_geometry_projection.py  test_gripper_axes.py  test_llm_parsing.py  test_real_gripper_visualization.py  test_stage2_repair.py
(+530 files in other folders)
