[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ask-professor-g"
version = "0.1.0"
description = "Reproducible IROS grasp planning pipeline with semantic grasp proposals and CEM optimization."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.23",
  "pillow>=10.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
llm = [
  "openai>=1.0",
  "google-genai>=0.3",
]
geometry = [
  "trimesh>=4.0",
  "scipy>=1.10",
]
render = [
  "pyrender>=0.1.45",
  "PyOpenGL>=3.1",
  "pyglet<2",
]
test = [
  "pytest>=7.0",
]
dev = [
  "pytest>=7.0",
  "ruff>=0.5",
]

[project.scripts]
ask-professor-g = "ask_professor_g.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
